backstage/backstage/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage
      containers:
        - name: backstage
          image: pedrocrc/lab-backstage:0.0.18
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /.backstage/health/v1/readiness
              port: http
          liveNessProbe:
            httpGet:
              path: /.backstage/health/v1/liveness
              port: http
